--- a/frontend/welcome.html
+++ b/frontend/welcome.html
@@ -16,8 +16,8 @@
       <p class="tagline">Timeless stories that stay with your soul.</p>
 
       <blockquote class="quote">
-        “A reader lives a thousand lives before he dies...”  
-        <span>– George R.R. Martin</span>
+        “Reading gives us someplace to go when we have to stay where we are.”  
+        <span>– Mason Cooley</span>
       </blockquote>
 
       <div class="buttons">
