--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -12,7 +12,7 @@
     <h1>📚 Classic Reads</h1>
     <nav>
       <ul>
-        <li><a href="dashboard.html">Home</a></li>
+        <li><a href="welcome.html">Home</a></li>
         <li><a href="myReads.html">My Reads</a></li>
         <li><a href="categories.html">Categories</a></li>
         <li><a href="login.html">Logout</a></li>
